# validata

./: .gitignore  README.md  pyproject.toml
pydantic_ui/: __main__.py  editor.py  lib.py
tests/: test_import_model.py
validata/: editor.py
