[project]
name = "validata"
version = "0.1.0"
description = "A textual editor and validator for YAML/JSON files against Pydantic models."
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pydantic",
    "pyyaml",
    "textual[syntax]>=0.73.0",
]

[project.scripts]
validata = "validata.__main__:main"
